[metadata]
name = freezer-api

summary = OpenStack Backup and Restore API Service
description-file =
    README.rst

author = Freezer Team
author_email = openstack-dev@lists.openstack.org

home-page = https://wiki.openstack.org/wiki/Freezer
classifier =
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving

[files]
packages =
    freezer_api

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[entry_points]
oslo.config.opts =
    freezer-api = freezer_api.common.config:list_opts
console_scripts =
    freezer-api = freezer_api.cmd.api:main
    freezer-manage = freezer_api.cmd.manage:main
tempest.test_plugins =
    freezer_api_tempest_tests = freezer_api.tests.freezer_api_tempest_plugin.plugin:FreezerApiTempestPlugin
paste.app_factory =
    service_v1 = freezer_api.service:freezer_app_factory
wsgi_scripts =
    freezer-api-wsgi = freezer_api.service:initialize_app

[pytests]
where=tests
verbosity=2

[pbr]
warnerrors = True
