[metadata]
name = freezer-api

summary = OpenStack Backup and Restore API Service
description-file =
    README.rst

author = OpenStack
author_email = openstack-discuss@lists.openstack.org

home-page = https://docs.openstack.org/freezer/latest/
classifier =
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving

[files]
packages =
    freezer_api

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[entry_points]
oslo.config.opts =
    freezer-api = freezer_api.common.config:list_opts
oslo.policy.policies =
    freezer-api = freezer_api.common.policies:list_rules
console_scripts =
    freezer-api = freezer_api.cmd.api:main
    freezer-manage = freezer_api.cmd.manage:main
    freezer-manager-status = freezer_api.cmd.status:main
wsgi_scripts =
    freezer-api-wsgi = freezer_api.service:initialize_app

freezer.db.backends =
     sqlalchemy = freezer_api.db.sqlalchemy.driver:SQLDriver
     elasticsearch = freezer_api.db.elasticsearch.driver:ElasticSearchDB

[pytests]
where=tests
verbosity=2

[pbr]
warnerrors = True
