[metadata]
name = freezer-api
summary = OpenStack Backup and Restore API Service
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
license = Apache-2
home_page = https://docs.openstack.org/freezer/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving

[files]
data_files =
    etc/freezer =
        etc/freezer/freezer-paste.ini
packages =
    freezer_api

[entry_points]
oslo.config.opts =
    freezer-api = freezer_api.common.config:list_opts
oslo.config.opts.defaults =
    freezer-api = freezer_api.common.config:set_lib_defaults
oslo.policy.policies =
    freezer-api = freezer_api.common.policies:list_rules
console_scripts =
    freezer-api = freezer_api.cmd.api:main
    freezer-manage = freezer_api.cmd.manage:main
    freezer-manager-status = freezer_api.cmd.status:main
wsgi_scripts =
    freezer-api-wsgi = freezer_api.service:initialize_app

freezer.db.backends =
     sqlalchemy = freezer_api.db.sqlalchemy.driver:SQLDriver
     elasticsearch = freezer_api.db.elasticsearch.driver:ElasticSearchDB

[pytests]
where=tests
verbosity=2
